Eevee refractions don't work anymore #70644

Closed
opened 2019-10-08 16:59:04 +02:00 by Likkez · 10 comments

System Information
Operating system: Linux-5.0.12-050012-generic-x86_64-with-neon-18.04-bionic 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.50

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-08 09:53, hash: 270562fe12
Worked: b1baebd022

Short description of error
Refractions make the mesh look flat shaded and stop working completely when you zoom out a little bit.
oct8 version:
refraction.png
oct1 version:
ref2.png

Exact steps for others to reproduce the error
Open the attached file and go into material view.
eevee_refraction.blend

**System Information** Operating system: Linux-5.0.12-050012-generic-x86_64-with-neon-18.04-bionic 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.50 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-08 09:53, hash: `270562fe12` Worked: b1baebd0224a806082ffec99fd6db0667e0ef49d **Short description of error** Refractions make the mesh look flat shaded and stop working completely when you zoom out a little bit. oct8 version: ![refraction.png](https://archive.blender.org/developer/F7796738/refraction.png) oct1 version: ![ref2.png](https://archive.blender.org/developer/F7796751/ref2.png) **Exact steps for others to reproduce the error** Open the attached file and go into material view. [eevee_refraction.blend](https://archive.blender.org/developer/F7796754/eevee_refraction.blend)
Author

Added subscriber: @Likkez-2

Added subscriber: @Likkez-2
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Addition information for the developers.

I can confirm this issue using 2.81 (sub 14), branch: master, commit date: 2019-10-06 14:05, hash: 54a9649e26

EEVEE_bump_issues.jpg

This is related to the other recent bump node bug reports.

Setting the shading to flat instead of smooth results in the refraction looking normal.

shade_flat.jpg

Replacing the bump node with the displacement node results in the refraction looking normal.

bump_replaced_with_displacement.jpg

Cranking up the midlevel on the displacement node (about 70 here) results in a similar effect to the bump node issue.

displacement_midlevel_cranked.jpg


System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Addition information for the developers. I can confirm this issue using 2.81 (sub 14), branch: master, commit date: 2019-10-06 14:05, hash: `54a9649e26` ![EEVEE_bump_issues.jpg](https://archive.blender.org/developer/F7797287/EEVEE_bump_issues.jpg) This is related to the other recent bump node bug reports. Setting the shading to flat instead of smooth results in the refraction looking normal. ![shade_flat.jpg](https://archive.blender.org/developer/F7797268/shade_flat.jpg) Replacing the bump node with the displacement node results in the refraction looking normal. ![bump_replaced_with_displacement.jpg](https://archive.blender.org/developer/F7797273/bump_replaced_with_displacement.jpg) Cranking up the midlevel on the displacement node (about 70 here) results in a similar effect to the bump node issue. ![displacement_midlevel_cranked.jpg](https://archive.blender.org/developer/F7797279/displacement_midlevel_cranked.jpg) --- **System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Closed as duplicate of #70611

Closed as duplicate of #70611
Author

Added subscriber: @fclem

Added subscriber: @fclem
Author

@fclem I've noticed this task was closed as a duplicate and you've fixed it in the #70614 however if I test the file on this page the issue is still there. Can you please test the file attached to this task?

@fclem I've noticed this task was closed as a duplicate and you've fixed it in the [#70614 ](https://developer.blender.org/T70614) however if I test the file on this page the issue is still there. Can you please test the file attached to this task?

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'

Well I'm not sure this is to be considered a bug. Plugging the bump map into the displacement socket is not supported. And it wasn't even supported before the bump refactor. Only the resulting artifact has changed. Cycles seems to handle this more gracefully but I'm not sure we can consider this a bug.

A more in depth analysis reveals that 9b034355e4 introduced it. This is because the geometry nodes added by the bump relinking have the dFdx/dFdy offsets applied to their values. However, the geometry node does need to have the dFdx/dFdy offsets applied if they are used as part of the bump tree (i.e: used as texture coordinate).

More simply put, the problem comes down to this:

Capture d’écran du 2019-10-10 16-12-12.png

I believe this is because the normal is not normalized after applying the dFdx/dFdy offsets.

~~Well I'm not sure this is to be considered a bug. Plugging the bump map into the displacement socket is not supported. And it wasn't even supported before the bump refactor. Only the resulting artifact has changed. Cycles seems to handle this more gracefully but I'm not sure we can consider this a bug.~~ A more in depth analysis reveals that 9b034355e4 introduced it. This is because the geometry nodes added by the bump relinking have the dFdx/dFdy offsets applied to their values. However, the geometry node does need to have the dFdx/dFdy offsets applied if they are used as part of the bump tree (i.e: used as texture coordinate). More simply put, the problem comes down to this: ![Capture d’écran du 2019-10-10 16-12-12.png](https://archive.blender.org/developer/F7801906/Capture_d_écran_du_2019-10-10_16-12-12.png) I believe this is because the normal is not normalized after applying the dFdx/dFdy offsets.
Clément Foucault self-assigned this 2019-10-10 16:19:19 +02:00

This issue was referenced by 8ada685581

This issue was referenced by 8ada6855811b7750fdee829306b908a7472c1315

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70644
No description provided.